<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mola_academic_datasets</name>
  <version>3.0.0</version>
  <description>Metapackage with all packages supporting reading academic datasets.</description>

  <maintainer email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</maintainer>
  <license file="LICENSE">BSD-3-Clause</license>

  <depend>kitti_metrics_eval</depend>
  <depend>mola_input_euroc_dataset</depend>
  <depend>mola_input_kitti360_dataset</depend>
  <depend>mola_input_kitti_dataset</depend>
  <depend>mola_input_mulran_dataset</depend>
  <depend>mola_input_paris_luco_dataset</depend>

  <!-- Minimum entries to release non-catkin packages -->
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
  <!-- End -->
</package>
